--- a/dice/CMakeLists.txt
+++ b/dice/CMakeLists.txt
@@ -2,7 +2,7 @@ add_contract(dice dice ${CMAKE_CURRENT_SOURCE_DIR}/src/dice.cpp)
 target_include_directories(dice.wasm
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
-   ${CMAKE_CURRENT_SOURCE_DIR}/../pc.token/include)
+   $ENV{SYSTEM_CONTRACTS_PATH}/pc.token/include)
 
 set_target_properties(dice.wasm
    PROPERTIES
