--- a/poker/CMakeLists.txt
+++ b/poker/CMakeLists.txt
@@ -2,7 +2,7 @@ add_contract(pocker pocker ${CMAKE_CURRENT_SOURCE_DIR}/src/pocker.cpp)
 target_include_directories(pocker.wasm
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
-   ${CMAKE_CURRENT_SOURCE_DIR}/../pc.token/include)
+   $ENV{SYSTEM_CONTRACTS_PATH}/pc.token/include)
 
 set_target_properties(pocker.wasm
    PROPERTIES
